addons/ingress/ingress-kube-system.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  namespace: kube-system 
  annotations: 
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: my.dash.me
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard 
          servicePort: 443
