addons/ingress/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: gmt.main.me
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-web 
          servicePort: 9000
